add debugging lines

--- a/templates/home.html
+++ b/templates/home.html
@@ -105,6 +105,9 @@
         </div>
     </form>
     <h2>
+       <!-- THE  prediction is {{results}} -->
+       THE  prediction is {{model_path}}
+       THE  prediction is {{model}}
        THE  prediction is {{results}}
     </h2>
    <body>
